[package]
name = "protohackers-rs"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "protohackers"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
env_logger = "0.10.1"
log = "0.4.20"
nom = "7.1.3"
primal = "0.3.2"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
tokio-stream = "0.1.14"
tokio-util = { version = "0.7.10", features = ["io", "net"] }
